--- a/pages/298.html
+++ b/pages/298.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="algebra">Algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p><h2 id="algebraic_theories">Algebraic theories</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+
+<h2 id="algebraic_theories">Algebraic theories</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+theory">algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/2-algebraic+theory">2-algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory">(∞,1)-algebraic theory</a></p>
 </li>
@@ -329,7 +337,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/operad">operad</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-operad">(∞,1)-operad</a></p>
 </li>
-</ul><h2 id="algebras_and_modules">Algebras and modules</h2><ul>
+</ul>
+
+<h2 id="algebras_and_modules">Algebras and modules</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra over a monad</a></p>
 
@@ -363,7 +375,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/associated+bundle">associated bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a></p>
 </li>
-</ul><h2 id="higher_algebras">Higher algebras</h2><ul>
+</ul>
+
+<h2 id="higher_algebras">Higher algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
 
@@ -433,7 +449,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation theory</a></li>
 </ul>
 </li>
-</ul><h2 id="model_category_presentations">Model category presentations</h2><ul>
+</ul>
+
+<h2 id="model_category_presentations">Model category presentations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+T-algebras">model structure on simplicial T-algebras</a> / <a class="existingWikiWord" href="/nlab/show/homotopy+T-algebra">homotopy T-algebra</a></p>
 </li>
@@ -443,7 +463,11 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+algebras+over+an+operad">model structure on algebras over an operad</a></p>
 </li>
-</ul><h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2><ul>
+</ul>
+
+<h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -451,7 +475,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Deligne+conjecture">Deligne conjecture</a></p>
 </li>
@@ -463,13 +491,36 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/higher+algebra+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 
 <h4 id="aqft">AQFT</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -525,7 +576,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometric+quantization">geometric quantization</a><a class="existingWikiWord" href="/nlab/show/geometric+quantization+of+symplectic+groupoids">of symplectic groupoids</a></p>
 </li>
@@ -533,7 +588,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+deformation+quantization">algebraic deformation quantization</a>, <a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/subsystem">subsystem</a></p>
 </li>
@@ -633,7 +692,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/picture+of+quantum+mechanics">picture of quantum mechanics</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a>, <a class="existingWikiWord" href="/nlab/show/Moyal+deformation+quantization">Moyal deformation quantization</a></p>
 </li>
@@ -655,7 +718,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Fock+space">Fock space</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+symmetry">gauge symmetry</a></p>
 </li>
@@ -683,7 +750,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+anomaly">gauge anomaly</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative AQFT</a></p>
 </li>
@@ -745,7 +816,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/renormalization+scheme">("re-")normalization scheme</a></p>
 
@@ -803,7 +878,13 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="Theorems">Theorems</h2><h3 id="states_and_observables">States and observables</h3><ul>
+</ul>
+
+<h2 id="Theorems">Theorems</h2>
+
+<h3 id="states_and_observables">States and observables</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/order-theoretic+structure+in+quantum+mechanics">order-theoretic structure in quantum mechanics</a></p>
 
@@ -845,7 +926,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kadison-Singer+problem">Kadison-Singer problem</a></p>
 </li>
-</ul><h3 id="operator_algebra">Operator algebra</h3><ul>
+</ul>
+
+<h3 id="operator_algebra">Operator algebra</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Wick%27s+theorem">Wick's theorem</a></p>
 </li>
@@ -873,7 +958,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Haag%27s+theorem">Haag's theorem</a></p>
 </li>
-</ul><h3 id="local_qft">Local QFT</h3><ul>
+</ul>
+
+<h3 id="local_qft">Local QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Reeh-Schlieder+theorem">Reeh-Schlieder theorem</a></p>
 </li>
@@ -897,7 +986,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> (<a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>)</p>
 </li>
-</ul><h3 id="perturbative_qft">Perturbative QFT</h3><ul>
+</ul>
+
+<h3 id="perturbative_qft">Perturbative QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Schwinger-Dyson+equation">Schwinger-Dyson equation</a></p>
 </li>
@@ -905,7 +998,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -1024,7 +1118,7 @@ margin-left: 0em;
 
 <h3 id="relation_to_conformal_nets">Relation to conformal nets</h3>
 
-<p>Subject to some conditions, from a vertex operator algebra one may induce a <a class="existingWikiWord" href="/nlab/show/conformal+net">conformal net</a> and conversely (<a href="#CapriKawahigahshiLongoWeiner15">Capri-Kawahigahshi-Longo-Weiner 15</a>).</p>
+<p>Subject to some conditions, from a vertex operator algebra one may induce a <a class="existingWikiWord" href="/nlab/show/conformal+net">conformal net</a> and conversely (<a href="#CarpiKawahigahshiLongoWeiner15">Carpi-Kawahigahshi-Longo-Weiner 15</a>, <a href="#Carpi16">Carpi 16</a>) also (<a href="#Gui18">Gui 18</a>).</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -1193,7 +1287,7 @@ margin-left: 0em;
 <p>Relation specifically to <a class="existingWikiWord" href="/nlab/show/conformal+nets">conformal nets</a> is discussed in</p>
 
 <ul>
-<li id="CapriKawahigahshiLongoWeiner15">
+<li id="CarpiKawahigahshiLongoWeiner15">
 <p><a class="existingWikiWord" href="/nlab/show/Sebastiano+Carpi">Sebastiano Carpi</a>, <a class="existingWikiWord" href="/nlab/show/Yasuyuki+Kawahigashi">Yasuyuki Kawahigashi</a>, <a class="existingWikiWord" href="/nlab/show/Roberto+Longo">Roberto Longo</a>, Mihály Weiner, <em>From vertex operator algebras to conformal nets and back</em>, Memoirs of the American Mathematical Society, Volume 254, Number 1213 2018; (<a href="https://doi.org/10.1090/memo/1213">doi:10.1090/memo/1213</a>, <a href="http://arxiv.org/abs/1503.01260">arXiv:1503.01260</a>)</p>
 </li>
 
@@ -1206,6 +1300,12 @@ margin-left: 0em;
 
 <ul>
 <li>James E. Tener, <em>Representation theory in chiral conformal field theory: from fields to observables</em> (<a href="https://arxiv.org/abs/1810.08168">arXiv:1810.08168</a>)</li>
+</ul>
+
+<p>Relation of the corresponding <span class="newWikiWord">ribbon categoires<a href="/nlab/new/ribbon+categoires">?</a></span>:</p>
+
+<ul>
+<li id="Gui18">Bin Gui, <em>Categorical extensions of conformal nets</em> (<a href="https://arxiv.org/abs/1812.04470">arXiv:1812.04470</a>)</li>
 </ul>
 
 <h3 id="category_of_vertex_operator_algebras_2">Category of vertex operator algebras</h3>
@@ -1257,14 +1357,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 20, 2018 at 08:15:28.
+  Last revised on December 12, 2018 at 12:04:45.
   See the <a href="https://ncatlab.org/nlab/history/vertex operator algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/vertex+operator+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vertex+operator+algebra/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/vertex+operator+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vertex+operator+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/vertex+operator+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vertex+operator+algebra/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/vertex+operator+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vertex+operator+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/vertex operator algebra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
