--- a/pages/4186.html
+++ b/pages/4186.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1426/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1426/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,29 @@ margin-left: 0em;
 
 <h4 id="aqft">AQFT</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -373,7 +395,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometric+quantization">geometric quantization</a><a class="existingWikiWord" href="/nlab/show/geometric+quantization+of+symplectic+groupoids">of symplectic groupoids</a></p>
 </li>
@@ -381,7 +407,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+deformation+quantization">algebraic deformation quantization</a>, <a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/subsystem">subsystem</a></p>
 </li>
@@ -481,7 +511,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/picture+of+quantum+mechanics">picture of quantum mechanics</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a>, <a class="existingWikiWord" href="/nlab/show/Moyal+deformation+quantization">Moyal deformation quantization</a></p>
 </li>
@@ -503,7 +537,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Fock+space">Fock space</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+symmetry">gauge symmetry</a></p>
 </li>
@@ -531,7 +569,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+anomaly">gauge anomaly</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative AQFT</a></p>
 </li>
@@ -593,7 +635,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/renormalization+scheme">("re-")normalization scheme</a></p>
 
@@ -651,7 +697,13 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="Theorems">Theorems</h2><h3 id="states_and_observables">States and observables</h3><ul>
+</ul>
+
+<h2 id="Theorems">Theorems</h2>
+
+<h3 id="states_and_observables">States and observables</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/order-theoretic+structure+in+quantum+mechanics">order-theoretic structure in quantum mechanics</a></p>
 
@@ -693,7 +745,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kadison-Singer+problem">Kadison-Singer problem</a></p>
 </li>
-</ul><h3 id="operator_algebra">Operator algebra</h3><ul>
+</ul>
+
+<h3 id="operator_algebra">Operator algebra</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Wick%27s+theorem">Wick's theorem</a></p>
 </li>
@@ -721,7 +777,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Haag%27s+theorem">Haag's theorem</a></p>
 </li>
-</ul><h3 id="local_qft">Local QFT</h3><ul>
+</ul>
+
+<h3 id="local_qft">Local QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Reeh-Schlieder+theorem">Reeh-Schlieder theorem</a></p>
 </li>
@@ -745,7 +805,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> (<a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>)</p>
 </li>
-</ul><h3 id="perturbative_qft">Perturbative QFT</h3><ul>
+</ul>
+
+<h3 id="perturbative_qft">Perturbative QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Schwinger-Dyson+equation">Schwinger-Dyson equation</a></p>
 </li>
@@ -753,11 +817,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -769,7 +839,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -1321,11 +1397,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1337,7 +1414,7 @@ margin-left: 0em;
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#3category_of_conformal_nets'>3-Category of conformal nets</a></li>
-<li><a href='#relation_to_vertex_operator_algebras'>Relation to vertex operator algebras</a></li>
+<li><a href='#RelationToVertexOperatorAlgebras'>Relation to vertex operator algebras</a></li>
 <li><a href='#relation_to_spectral_triples'>Relation to spectral triples</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
@@ -1356,7 +1433,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <em>conformal net</em> is a <a class="existingWikiWord" href="/nlab/show/local+net">local net</a> of observables that describes (2-dimensional) <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> in the framework of <a class="existingWikiWord" href="/nlab/show/AQFT">AQFT</a>.</p>
+<p>A <em>conformal net</em> is a <a class="existingWikiWord" href="/nlab/show/local+net+of+observables">local net of observables</a> that describes (<a class="existingWikiWord" href="/nlab/show/2d+CFT">2-dimensional</a>) <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> in the framework of <a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a>.</p>
 
 <h2 id="definition">Definition</h2>
 
@@ -1372,13 +1449,13 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/3-category+of+fermionic+conformal+nets">3-category of fermionic conformal nets</a></li>
 </ul>
 
-<h3 id="relation_to_vertex_operator_algebras">Relation to vertex operator algebras</h3>
+<h3 id="RelationToVertexOperatorAlgebras">Relation to vertex operator algebras</h3>
 
-<p>Subject to some conditions a <a class="existingWikiWord" href="/nlab/show/vertex+operator+algebra">vertex operator algebra</a> may be turned into a conformal net and vice versa (<a href="#CarpiKawahigahshiLongoWeiner15">Carpi-Kawahigahshi-Longo-Weiner 15</a>).</p>
+<p>Subject to some conditions a <a class="existingWikiWord" href="/nlab/show/vertex+operator+algebra">vertex operator algebra</a> may be turned into a conformal net and vice versa (<a href="#CarpiKawahigahshiLongoWeiner15">Carpi-Kawahigahshi-Longo-Weiner 15</a>, <a href="#Carpi16">Carpi 16</a>) also (<a href="#Gui18">Gui 18</a>).</p>
 
 <h3 id="relation_to_spectral_triples">Relation to spectral triples</h3>
 
-<p>Superconformal nets encoding <a class="existingWikiWord" href="/nlab/show/2d+SCFTs">2d SCFTs</a> may be related to <a class="existingWikiWord" href="/nlab/show/local+nets">local nets</a> of <a class="existingWikiWord" href="/nlab/show/spectral+triples">spectral triples</a> (<a href="#CHKL09">#CHKL 09</a>) (an incarnation of “<a class="existingWikiWord" href="/nlab/show/2-spectral+triples">2-spectral triples</a>”, see there for more).</p>
+<p>Superconformal nets encoding <a class="existingWikiWord" href="/nlab/show/2d+SCFTs">2d SCFTs</a> may be related to <a class="existingWikiWord" href="/nlab/show/local+nets">local nets</a> of <a class="existingWikiWord" href="/nlab/show/spectral+triples">spectral triples</a> (<a href="#CHKL09">CHKL 09</a>) (an incarnation of “<a class="existingWikiWord" href="/nlab/show/2-spectral+triples">2-spectral triples</a>”, see there for more).</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -1444,7 +1521,7 @@ margin-left: 0em;
 <p>Relation to <a class="existingWikiWord" href="/nlab/show/vertex+operator+algebras">vertex operator algebras</a> is discussed in</p>
 
 <ul>
-<li id="CapriKawahigahshiLongoWeiner15">
+<li id="CarpiKawahigahshiLongoWeiner15">
 <p><a class="existingWikiWord" href="/nlab/show/Sebastiano+Carpi">Sebastiano Carpi</a>, <a class="existingWikiWord" href="/nlab/show/Yasuyuki+Kawahigashi">Yasuyuki Kawahigashi</a>, <a class="existingWikiWord" href="/nlab/show/Roberto+Longo">Roberto Longo</a>, Mihály Weiner, <em>From vertex operator algebras to conformal nets and back</em>, Memoirs of the American Mathematical Society, Volume 254, Number 1213 2018; (<a href="https://doi.org/10.1090/memo/1213">doi:10.1090/memo/1213</a>, <a href="http://arxiv.org/abs/1503.01260">arXiv:1503.01260</a>)</p>
 </li>
 
@@ -1457,6 +1534,12 @@ margin-left: 0em;
 
 <ul>
 <li>James E. Tener, <em>Representation theory in chiral conformal field theory: from fields to observables</em> (<a href="https://arxiv.org/abs/1810.08168">arXiv:1810.08168</a>)</li>
+</ul>
+
+<p>Relation of the corresponding <a class="existingWikiWord" href="/nlab/show/ribbon+categories">ribbon categories</a>:</p>
+
+<ul>
+<li id="Gui18">Bin Gui, <em>Categorical extensions of conformal nets</em> (<a href="https://arxiv.org/abs/1812.04470">arXiv:1812.04470</a>)</li>
 </ul>
 
 <p>Relation to <a class="existingWikiWord" href="/nlab/show/2-spectral+triples">2-spectral triples</a> is discussed in terms of <a class="existingWikiWord" href="/nlab/show/vertex+operator+algebras">vertex operator algebras</a></p>
@@ -1500,14 +1583,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 20, 2018 at 08:14:44.
+  Last revised on December 12, 2018 at 12:07:05.
   See the <a href="https://ncatlab.org/nlab/history/conformal net" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+net" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+net/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/conformal+net" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+net" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/conformal+net" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+net/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/conformal+net" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+net" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/conformal net/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
