--- a/pages/7233.html
+++ b/pages/7233.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -929,7 +929,7 @@ margin-left: 0em;
 </li>
 
 <li id="Reidegeld15">
-<p><a class="existingWikiWord" href="/nlab/show/Frank+Reidegeld">Frank Reidegeld</a><em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href="http://arxiv.org/abs/1512.05114">arXiv:1512.05114</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Frank+Reidegeld">Frank Reidegeld</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href="http://arxiv.org/abs/1512.05114">arXiv:1512.05114</a>)</p>
 </li>
 
 <li>
@@ -1014,14 +1014,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 11:52:38.
+  Last revised on December 12, 2018 at 12:23:58.
   See the <a href="https://ncatlab.org/nlab/history/G2 manifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/G2+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G2+manifold/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/G2+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G2+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/G2+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G2+manifold/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/G2+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G2+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/G2 manifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
