--- a/pages/9018.html
+++ b/pages/9018.html
@@ -1742,6 +1742,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/James+Halverson">James Halverson</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <em>The Landscape of M-theory Compactifications on Seven-Manifolds with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math> Holonomy</em> (<a href="http://arxiv.org/abs/1412.4123">arXiv:1412.4123</a>)</p>
 </li>
+
+<li>
+<p>Aaron Kennon, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-Manifolds and M-Theory Compactifications</em> (<a href="https://arxiv.org/abs/1810.12659">arXiv:1810.12659</a>)</p>
+</li>
 </ul>
 
 <p>The corresponding <a class="existingWikiWord" href="/nlab/show/membrane">membrane</a> <a class="existingWikiWord" href="/nlab/show/instanton">instanton</a> corrections to the <span class="newWikiWord">superpotential<a href="/nlab/new/superpotential">?</a></span> are discussed in</p>
@@ -1883,14 +1887,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 11:55:39.
+  Last revised on December 12, 2018 at 12:49:33.
   See the <a href="https://ncatlab.org/nlab/history/M-theory on G2-manifolds" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/72" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(72 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/73" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(73 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M-theory on G2-manifolds/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
